fix: GAP Pool - Remove trust level column

--- a/frontend/src/app/components/pool/pool-nodes-table/pool-nodes-table.less
+++ b/frontend/src/app/components/pool/pool-nodes-table/pool-nodes-table.less
@@ -32,10 +32,6 @@ pool-nodes-table {
             min-width: 120px;
         }
 
-        .trust-level-col {
-            min-width: 130px;
-        }
-
         .data-activity-col {
             min-width: 178px;
         }
